@@ -3,8 +3,9 @@ youker-assistant (2.0.3) vivid; urgency=low
   * Access FT Arm settings and information.
   * Deal with situation when the scanning garbage is empty.
   * Display hardware manufacturer logo.
+  * Add Gio.Settings notify for Unity settings.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 24 Apr 2015 11:43:17 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 28 Apr 2015 17:48:05 +0800
 
 youker-assistant (2.0.2) vivid; urgency=low
 
